--- a/assets/style/media.css
+++ b/assets/style/media.css
@@ -191,7 +191,7 @@
     .filter__navigation .filter__navigation-list{
         display: grid;
         grid-template-columns: repeat(3, 1fr);
-        margin: 20px 0;
+        margin: 0 0 20px 0;
         /* flex-direction: column; */
         /* flex-wrap: wrap; */
         /* justify-content: space-around; */
@@ -350,7 +350,7 @@
         width: 100%;
         height: 100%;
         background-color: rgb(242, 242, 242, .9);
-        padding: 112px 48px 48px 48px;
+        padding: 72px 48px 48px 48px;
         transition: all .3s ease 0s;
         overflow: auto;                     
     }
