--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -77,7 +77,7 @@ body._lock {
 }
 
 .page__main .page__header {
-  height: 112px;
+  height: 72px;
   width: 100%;
   background-color: #F2F2F2;
   position: fixed;
@@ -100,7 +100,7 @@ body._lock {
   -webkit-box-align: end;
       -ms-flex-align: end;
           align-items: flex-end;
-  padding: 32px 0;
+  padding: 12px 0 12px 0;
 }
 .page__main .page__header .page__container .page__nav-bar .header__logo {
   display: -webkit-box;
@@ -174,7 +174,7 @@ body._lock {
   border-bottom: #727272 solid 1px;
 }
 .page__main .page__content {
-  padding-top: 112px;
+  padding-top: 72px;
 }
 .page__main .page__content .page__container {
   padding: 0 0.9375rem;
@@ -182,7 +182,7 @@ body._lock {
   max-width: 1670px;
 }
 .page__main .page__content .page__container .page__title {
-  height: calc(100vh - 112px);
+  height: calc(100vh - 72px);
 }
 .page__main .page__content .page__container .page__title .title-container {
   position: relative;
@@ -192,7 +192,7 @@ body._lock {
   position: absolute;
   left: 0;
   margin: 0;
-  top: calc(50% - 56px);
+  top: calc(50% - 36px);
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
 }
@@ -253,7 +253,7 @@ body._lock {
   position: absolute;
   left: 0;
   margin: 0;
-  top: calc(50% - 56px);
+  top: calc(50% - 36px);
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
 }
