--- a/assets/style/media.css
+++ b/assets/style/media.css
@@ -1,7 +1,4 @@
 @media (orientation: landscape) and (max-height: 430px) {
-
-    
-    
     .page__main .page__content .page__container .page__title .title-container .title-anim{
         top: 0;
         -ms-transform: translateY(0);
@@ -12,26 +9,11 @@
         -ms-transform: translateY(0);
         transform: translateY(0);
     }
-
-     
 }
 
-
-
-
-
-
-
 @media (min-width: 991px) {
-
-    .contacts__place-a-meeting{
-        
-        margin-left: 50px;
-    }
-
-    .menu__filter{
-        display: none;
-    }
+    .contacts__place-a-meeting{margin-left: 50px;}
+    .menu__filter{display: none;}
 }
 
 @media (max-width: 991px) {
@@ -41,129 +23,59 @@
     .contacts__place-a-meeting{
         width: 70%;
         margin: 0 auto;
-        
     }
-    
-    /* .page__main .page__content .page__container .page__projects .section-wrapper .project__wrapper{
-        grid-template-columns: repeat(2, 1fr);
-        gap: 16px;
-    } */
-
     .page__main .page__content .page__container .page__about-us .about-us .about-us__container{
         grid-template-columns: repeat(2, 1fr);
         gap: 16px; 
     }
-    
     .page__main .page__content .page__container .page__projects .section-wrapper .project__wrapper .project__content{
         width: calc(((100% - 28px) / 2 ) + 13px);
     }
-
-
-    /* .page__filter > .section-wrapper{
-        padding: 112px 0 0 0;
-    } */
-
-    
-    .filter__navigation{
-        /* display: block; */
-        padding: 0;
-        /* display: none; */
-    }
-
-  
-
+    .filter__navigation{padding: 0;}
     .filter{
         height: fit-content;
-        /* display: flex; */
-        /* justify-content: center; */
-        /* align-items: center; */
-        /* flex-direction: column; */
         background-color: #F2F2F2;
         margin-bottom: 20px;
-        /* position: relative; */
-        /* z-index: 8; */
     }
-
     .filter .menu__filter {
         display: flex;
-        /* justify-content: center; */
         position: relative;
         height: 30px;
         z-index: 7;
         background-color: #F2F2F2;
         border-bottom: #c5c5c5 1px solid;
-        /* width: 100%;         */
-
-
-        
-        
     }
-
-    
     .menu__filter .arrow-icon{
-        /* content: ""; */
         position: absolute;
-        /* display: flex; */
-        /* justify-content: center; */
         right: 0;
         top: 3px;        
         width: 24px;
         height: 24px;
-        /* border: 2px solid #000; */
-        /* border-top: 2px solid transparent; */
-        /* border-right: 2px solid transparent; */
-        /* transform: rotate(-45deg); */
         transition: all 0.3s ease 0s;
     }
     .menu__filter .arrow-icon svg{
         height: 100%;
         width: 100%;
     }
-
     .menu__filter._filter-active .arrow-icon{
         transform: rotate(-180deg);
     }
     .menu__filter .arrow-text{
-        /* position: absolute; */
-        /* left: 50px; */
-        /* margin: auto 0; */
-        /* margin-right: 32px; */
         font-size: 20px;
-        /* font-weight: 700; */
-    }
-
-    .page__main .page__header{
-        /* position: relative; */
-    }
-
-    .page__main .page__content {
-        /* padding-top: 112px; */
     }
     .filter__navigation{
-        /* position: relative; */
-        /* left: 0; */
-        /* top: 50px; */
         z-index: 5;
         height: fit-content;
         width: 100%;
-
-
-
-
         position: fixed;
         left: 0;
         top: 0 ;
-        /* right:0 ; */
-        /* width: 100% ; */
         transition: all 1s ease 0s;
         transform: translateY(-100%);
-        /* padding: 0 0 24px 0 !important; */
     }
-
     .filter__navigation._filter-active{
         transform: translateY(120px);
     }
-
     .project__wrapper{
         transition: all .5s ease 0s;
         position: relative;
@@ -178,23 +90,10 @@
     footer._filter-active{
         transform: translateY(160px);
     }
-
-
-
-    .filter__navigation::after{
-        /* z-index: 9; */
-        /* background-color: rgb(242, 242, 242, .9);; */
-    }
-    
-
-
     .filter__navigation .filter__navigation-list{
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         margin: 0 0 20px 0;
-        /* flex-direction: column; */
-        /* flex-wrap: wrap; */
-        /* justify-content: space-around; */
     }
     .filter__navigation .filter__navigation-list .filter__all{
         font-weight: 700;
@@ -207,52 +106,28 @@
         position: relative;
         z-index: 1;
         margin: 0 auto;
-        /* width: calc(100%  / 3 ); */
-        /* width: 200px; */
-        /* @include text_hover; */
     }   
-   
     .filter__navigation .filter__navigation-list span{
         display: none;
     }
-
-
-
 }
 
 @media (max-width: 730px) {
-    /* .page__main .page__content .page__container .page__about-us .about-us .about-us__container .emp-block-hiden-992-1199{
-        display: none;
-    } */
     .page__main .page__content .page__container .page__title{
         height: 600px;
     }
-
     .filter__navigation .filter__navigation-list{
         grid-template-columns: repeat(2, 1fr);
-        
     }
 }
 
 @media (max-width: 481px) {
-    /* .page__main .page__content .page__container .page__about-us .about-us .about-us__container .emp-block-hiden481{
-        display: none;
-    } */
-    
     .page__main .page__content .page__container .page__contacts .contacts .contacts__container .contacts__place-a-meeting{
         width: 100%;
     }
-
     .page__main .page__content .page__container .page__title {
         height: 400px;
     }
-
-    
-    /* .page__main .page__content .page__container .page__projects .section-wrapper .project__wrapper{
-        grid-template-columns: repeat(1, 1fr) !important;
-    }*/
-
-     
 }
 
 @media (max-width: 575px) {
@@ -261,16 +136,7 @@
     }
     .page__main .page__content .page__container .page__about-us .about-us .about-us__container{
         grid-template-columns: repeat(1, 1fr);
-        
     }    
-
-
-}
-
-@media (min-width: 992px) and (max-width: 1199px) { 
-    /* .page__main .page__content .page__container .page__about-us .about-us .about-us__container .emp-block-hiden-992-1199{
-        /* display: none; */
-    /* } */
 }
 
 @media (max-width: 1670px) {
@@ -283,7 +149,6 @@
     .page__main .page__header .page__container, .page__main .page__content .page__container, .page__footer .page__container{
         max-width: 970px;
     }
-
     .header__menu{
         height: 48px;
         display: flex;
@@ -308,41 +173,31 @@
         transition: all 0.3s ease 0s;
         background-color: #000000;
     }
-
     .menu__icon::before, 
     .menu__icon::after {
         content: "";
-        
     }
     .menu__icon::before{
         top: 0px;        
     }
-    
     .menu__icon::after {
         bottom: 0px;
     }
-    
     .menu__icon span{               
         top: 50%;
         transform: scale(1) translate(0px, -50%);
-        
     }
-
     .menu__icon._active span{
         transform: scale(0) translate(0px, -50%);
     }
-    
     .menu__icon._active::before{
         top: 50%;
         transform: rotate(-45deg) translate(0px, -50%);
     }
-
     .menu__icon._active::after{
         bottom: 50%;
         transform: rotate(45deg) translate(0px, 50%);
     }
-
-    
     .page__main .page__header .page__container .page__nav-bar .menu .menu__body{
         position: fixed;
         top: 0;
@@ -354,14 +209,11 @@
         transition: all .3s ease 0s;
         overflow: auto;                     
     }
-
     .page__main .page__header .page__container .page__nav-bar .menu__body._active{
         right: 0;
     }
-
     .menu .menu__body::before{
         content: "";
-        /* position: fixed; */
         width: 100%;
         top: 0;
         left: 0;
@@ -371,13 +223,11 @@
     .menu__body .menu__list{
         margin: 24px 0 0 0;
         font-size: 24px; 
-        
     }
     .menu__body .menu__list li{
         display: flex;
         justify-content: center;
         margin: 0 0 54px 0;            
-                                   
     } 
     .page__main .page__header .page__container .page__nav-bar .menu .menu__list li .menu__icons{
         position: fixed;
@@ -388,28 +238,19 @@
         margin-left: 50px;
         height: 25px;
     }
-    
     .menu__icons .icon:first-child{
         margin-left: 0;
     }  
-  
-
     .info__paragraphs .par-group .par{
         width: 100%;
     } 
-
     .page__main .page__content .page__container .page__projects .section-wrapper .project__wrapper .project__content{
         padding-bottom: 1.125rem;
     }
-
     .awards__content .awards__wrapper .years-wrapper{
         grid-template-columns: 1fr;
         column-gap: 0;
     }
-
-    /* .page__main .page__content .page__container .page__about-us .about-us .about-us__container .emp-block-hiden-992-1199{
-        display: none;
-    } */
 }
 
 @media (min-width: 1200px) { 
@@ -420,7 +261,4 @@
     .menu__list li{
         padding: 0 0 0 40px;           
     }
-    /* .page__main .page__content .page__container .page__about-us .about-us .about-us__container .emp-block-hiden-992-1199{
-        display: none;
-    } */
 }
