--- a/projects/style/project-slider-style.css
+++ b/projects/style/project-slider-style.css
@@ -39,7 +39,7 @@ body {
 }
 
 .image-slider .swiper-pagination-fraction {
-  font-size: 24px;
+  font-size: 1.5rem;
   color: #252525;
   text-align: start;
   width: -webkit-fit-content;
