--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -390,6 +390,7 @@ body._lock{
                                         padding: rem(2) 0;
                                         margin: 0 auto;
                                         cursor: pointer;
+                                        letter-spacing: 0.2em !important;
                                     }
                                     .contacts__cotact-us-PP{
                                         width: 90%;
