--- a/assets/style/style_projects.css
+++ b/assets/style/style_projects.css
@@ -62,11 +62,13 @@
 
 @-webkit-keyframes hide {
   0% {
-    visibility: visible;
+    /* visibility: visible; */
+    display: block;
     height: 400px;
   }
   100% {
-    visibility: hidden;
+    /* visibility: hidden; */
+    display: none;
     width: 0;
     height: 0;
     min-width: 0;
