--- a/assets/style/style_projects.css
+++ b/assets/style/style_projects.css
@@ -1,6 +1,5 @@
 ._underscore {
   border-bottom: #727272 solid 1px;
-  -webkit-transition: all 0.5s ease;
   transition: all 0.5s ease;
 }
 
@@ -20,12 +19,8 @@
   padding: 0 0 24px 0;
 }
 .filter__navigation .filter__navigation-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
 }
 .filter__navigation .filter__navigation-list li {
   border-bottom: transparent solid 1px;
@@ -34,7 +29,6 @@
 }
 .filter__navigation .filter__navigation-list li:hover {
   border-bottom: #727272 solid 1px;
-  -webkit-transition: all 0.5s ease;
   transition: all 0.5s ease;
   cursor: pointer;
 }
@@ -46,44 +40,23 @@
 }
 
 .animation {
-  -webkit-transform: scale(0);
-          transform: scale(0);
+  transform: scale(0);
   opacity: 0;
 }
 
 .filter_hidden {
-  -webkit-animation-name: hide;
-          animation-name: hide;
-  -webkit-animation-duration: 0.5s;
-          animation-duration: 0.5s;
-  -webkit-animation-fill-mode: forwards;
-          animation-fill-mode: forwards;
-}
-
-@-webkit-keyframes hide {
-  0% {
-    visibility: visible;
-    height: 400px;
-  }
-  100% {
-    visibility: hidden;
-    width: 0;
-    height: 0;
-    min-width: 0;
-    min-height: 0;
-    margin: 0;
-    padding: 0;
-    font-size: 0;
-  }
+  animation-name: hide;
+  animation-duration: 0.5s;
+  animation-fill-mode: forwards;
 }
 
 @keyframes hide {
   0% {
-    visibility: visible;
+    display: block;
     height: 400px;
   }
   100% {
-    visibility: hidden;
+    display: none;
     width: 0;
     height: 0;
     min-width: 0;
@@ -92,4 +65,4 @@
     padding: 0;
     font-size: 0;
   }
-}
+}/*# sourceMappingURL=style_projects.css.map */
