--- a/assets/style/style_projects.scss
+++ b/assets/style/style_projects.scss
@@ -46,12 +46,13 @@
 
 @keyframes hide{
     0%{
-        visibility: visible;
+        // visibility: visible;
+        display: block;
         height: 400px;
     }
     100%{              
-        // display: none;
-        visibility: hidden;
+        display: none;
+        // visibility: hidden;
         width: 0;
         height: 0;
         min-width: 0;
