--- a/assets/style/style_projects.css
+++ b/assets/style/style_projects.css
@@ -50,13 +50,17 @@
   animation-fill-mode: forwards;
 }
 
+.hide {
+  display: none !important;
+}
+
 @keyframes hide {
   0% {
-    display: block;
+    visibility: visible;
     height: 400px;
   }
   100% {
-    display: none;
+    visibility: hidden;
     width: 0;
     height: 0;
     min-width: 0;
