--- a/assets/style/style_projects.scss
+++ b/assets/style/style_projects.scss
@@ -42,17 +42,22 @@
     animation-name: hide;
     animation-duration: .5s;
     animation-fill-mode: forwards;
+    // display: none !important;
+}
+
+.hide{
+    display: none !important;
 }
 
 @keyframes hide{
     0%{
-        // visibility: visible;
-        display: block;
+        visibility: visible;
+        // display: block;
         height: 400px;
     }
     100%{              
-        display: none;
-        // visibility: hidden;
+        // display: none;
+        visibility: hidden;
         width: 0;
         height: 0;
         min-width: 0;
