--- a/assets/style/style_projects.css
+++ b/assets/style/style_projects.css
@@ -40,8 +40,8 @@
 }
 
 .animation {
-  transform: scale(0);
-  opacity: 0;
+  transform: scale(0.1) !important;
+  opacity: 0 !important;
 }
 
 .filter_hidden {
