--- a/assets/style/style_projects.scss
+++ b/assets/style/style_projects.scss
@@ -34,8 +34,8 @@
 }
 
 .animation{
-    transform: scale(0);
-    opacity: 0;
+    transform: scale(0.1) !important;
+    opacity: 0 !important;
 }
 
 .filter_hidden{
