--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -34,7 +34,7 @@ html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pr
 }
 
 .project__content{
-    transition: all 0.5s;
+    // transition: all 0.5s;
 }
 
 .project__text{
