--- a/assets/style/style_projects.css
+++ b/assets/style/style_projects.css
@@ -40,7 +40,8 @@
 }
 
 .animation {
-  transform: scale(0.1) !important;
+  transform: scale(0) !important;
+  transition: all 0.5s;
   opacity: 0 !important;
 }
 
