--- a/assets/style/style_projects.scss
+++ b/assets/style/style_projects.scss
@@ -34,9 +34,12 @@
 }
 
 .animation{
-    transform: scale(0) !important;
+    transform: scale(0);
+    // -webkit-transform: scale (0);
+    // -moz-transform: scale (0);
+    // -ms-transform: scale (0);
     transition: all .8s;
-    opacity: 0 !important;
+    opacity: 0;
 }
 
 .filter_hidden{
