--- a/assets/style/style_about-us.css
+++ b/assets/style/style_about-us.css
@@ -8,14 +8,24 @@
 }
 
 .achievements__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 .achievements__wrapper .achievements__block {
   padding: 20px 52px 20px 52px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 .achievements__wrapper .achievements__block .number {
   font-size: 54px;
@@ -33,16 +43,28 @@
 }
 
 .info__paragraphs {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 .info__paragraphs .par-group {
   margin-bottom: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 .info__paragraphs .par-group:nth-child(even) {
-  align-items: flex-end;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
 }
 .info__paragraphs .par-group .par {
   width: 48%;
@@ -63,10 +85,13 @@
   padding-bottom: 28px;
 }
 .awards__content .awards__wrapper .years-wrapper {
+  display: -ms-grid;
   display: grid;
+  -ms-grid-columns: 1fr 32px 1fr;
   grid-template-columns: 1fr 1fr;
-  -moz-column-gap: 32px;
-       column-gap: 32px;
+  -webkit-column-gap: 32px;
+     -moz-column-gap: 32px;
+          column-gap: 32px;
   margin-bottom: 48px;
 }
 .awards__content .awards__wrapper .awards__block {
@@ -84,8 +109,12 @@
 }
 
 .footer__icons {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 .footer__icons .icon {
   height: 20px;
@@ -100,4 +129,4 @@
   margin-top: 20px;
   text-transform: uppercase;
   font-size: 12px;
-}/*# sourceMappingURL=style_about-us.css.map */
+}
