--- a/assets/style/style_projects.scss
+++ b/assets/style/style_projects.scss
@@ -35,16 +35,16 @@
 
 .animation{
     transform: scale(0);
-    // -webkit-transform: scale (0);
-    // -moz-transform: scale (0);
-    // -ms-transform: scale (0);
-    transition: all .8s;
+    -webkit-transform: scale (0);
+    -moz-transform: scale (0);
+    -ms-transform: scale (0);
+    transition: all .7s;
     opacity: 0;
 }
 
 .filter_hidden{
     animation-name: hide;
-    animation-duration: .8s;
+    animation-duration: .7s;
     animation-fill-mode: forwards;
     // display: none !important;
 }
