--- a/project/style/project-slider-style.css
+++ b/project/style/project-slider-style.css
@@ -42,12 +42,15 @@ body {
   font-size: 1.5rem;
   color: #252525;
   text-align: start;
+  width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
   background-color: #F2F2F2;
 }
 
 .photo-text {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   text-align: left;
 }
@@ -56,4 +59,4 @@ body {
 }
 .photo-text .photo-text-right {
   width: 25%;
-}/*# sourceMappingURL=project-slider-style.css.map */
+}
